--- a/dialog/src/main/res/drawable/dialog_bottom_item_middle_btn.xml
+++ b/dialog/src/main/res/drawable/dialog_bottom_item_middle_btn.xml
@@ -3,18 +3,14 @@
     <item android:state_window_focused="false">
         <shape android:shape="rectangle">
             <!--填充颜色-->
-            <solid android:color="@color/ios_like_grey6" />
-            <!-- 圆角 -->
-            <corners android:bottomRightRadius="15dp" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <!--填充颜色-->
-            <solid android:color="@color/ios_like_grey3" />
-            <!-- 圆角 -->
-            <corners android:bottomRightRadius="15dp" />
+            <solid android:color="@color/ios_like_grey5" />
         </shape>
     </item>
 </selector>
