--- a/dialog/src/main/res/values/colors.xml
+++ b/dialog/src/main/res/values/colors.xml
@@ -4,10 +4,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dialog_normal_bg">#eeeeee</color>
-    <color name="dialog_normal_line">#b3b3b3</color>
-    <color name="dialog_normal_press">#d1d1d1</color>
-    <color name="ios_like_blue">#037BFF</color>
-    <color name="ios_like_red">#FD4A2E</color>
+
+    <color name="ios_like_grey">#6c6c70</color>
+    <color name="ios_like_grey2">#8e8e93</color>
+    <color name="ios_like_grey3">#aeaeb2</color>
+    <color name="ios_like_grey4">#bcbcc0</color>
+    <color name="ios_like_grey5">#d8d8dc</color>
+    <color name="ios_like_grey6">#ebebf0</color>
+
+    <color name="ios_like_blue">#0040dd</color>
+    <color name="ios_like_green">#248a3d</color>
+    <color name="ios_like_indigo">#3634a3</color>
+    <color name="ios_like_orange">#c93400</color>
+    <color name="ios_like_pink">#d30f45</color>
+    <color name="ios_like_teal">#0071a4</color>
+    <color name="ios_like_purple">#8944ab</color>
+    <color name="ios_like_yellow">#a05a00</color>
+    <color name="ios_like_red">#d70015</color>
     <color name="transparent">#00000000</color>
 </resources>
