--- a/dialog/src/main/res/values/styles.xml
+++ b/dialog/src/main/res/values/styles.xml
@@ -2,8 +2,13 @@
 <resources>
 
     <style name="BottomDialogAnimation" parent="@android:style/Animation.Dialog">
-        <item name="android:windowEnterAnimation">@anim/dialog_in</item>
-        <item name="android:windowExitAnimation">@anim/dialog_out</item>
+        <item name="android:windowEnterAnimation">@anim/dialog_bottom_to_up</item>
+        <item name="android:windowExitAnimation">@anim/dialog_up_to_bottom</item>
+    </style>
+
+    <style name="FadeInAndOutAnimation" parent="@android:style/Animation.Dialog">
+        <item name="android:windowEnterAnimation">@anim/dialog_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_fade_out</item>
     </style>
 
     <style name="NormalDialogStyle" parent="@android:style/Theme.Dialog">
@@ -15,6 +20,7 @@
         <item name="android:backgroundDimAmount">0.3</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/FadeInAndOutAnimation</item>
     </style>
 
     <style name="BottomDialogStyle" parent="@android:style/Theme.Dialog">
@@ -23,8 +29,21 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.3</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
+    </style>
+
+    <style name="HudDialogStyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.3</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/FadeInAndOutAnimation</item>
     </style>
 </resources>
