--- a/dialog/src/main/res/layout/dialog_hud.xml
+++ b/dialog/src/main/res/layout/dialog_hud.xml
@@ -7,24 +7,30 @@
     android:background="@drawable/dialog_hud_bg"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp">
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="20dp">
     <com.civitasv.ioslike.view.LoadingView
         android:id="@+id/progress_view"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_progress_view"
+        android:layout_marginTop="20dp"
         app:duration="1000"
+        android:visibility="visible"
         app:frameCount="12" />
     <com.civitasv.ioslike.view.ProgressView
         android:id="@+id/pie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/progress_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
@@ -32,6 +38,7 @@
         android:gravity="center_horizontal"
         android:textColor="@color/ios_like_grey6"
         android:textSize="16sp"
+        android:visibility="gone"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/pie"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +51,7 @@
         android:layout_below="@id/label"
         android:textColor="@color/ios_like_grey6"
         android:textSize="14sp"
+        android:visibility="gone"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/label"
         app:layout_constraintStart_toStartOf="parent"
